# dz_lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
include/: dz_arena.h  dz_array.h  dz_debug.h  dz_hashmap.h
scripts/: format.sh  run_all_tests.sh
src/: dz_arena.c  dz_array.c  dz_array.h  dz_core.c  dz_core.h  dz_debug.c  dz_hashmap.c  dz_hashmap.h  prime.c  prime.h
tests/: CMakeLists.txt  dz_arena_test.cpp  dz_array_test.cpp  dz_core_test.cpp  dz_hashmap_test.cpp
